# lab06

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  CPackConfig.cmake  ChangeLog.md  DESCRIPTION  LICENSE  LICENSE.rtf  README.md
.github/workflows/: ci.yml  cpack.yml
_build/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  install_manifest.txt
src/: print.hpp  solver.cpp
